--- a/Program1Lesson1KrestininAV/Base.lproj/Main.storyboard
+++ b/Program1Lesson1KrestininAV/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="landscape">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -21,51 +21,51 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Начальная стоимость вашей ласточки - 500 000" lineBreakMode="clip" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NS9-eR-vNN">
-                                <rect key="frame" x="20" y="329" width="627" height="21"/>
+                                <rect key="frame" x="20" y="479" width="335" height="41"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BVg-ZN-l9S">
-                                <rect key="frame" x="293" y="269" width="82" height="30"/>
+                                <rect key="frame" x="146.5" y="419" width="82" height="30"/>
                                 <state key="normal" title="Рассчитать"/>
                                 <connections>
                                     <action selector="configButtonPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ivb-kf-RJu"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lmp-gs-QnC">
-                                <rect key="frame" x="40" y="142" width="587" height="117"/>
+                                <rect key="frame" x="36" y="215" width="303" height="194"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="qRI-Vr-1Ew">
-                                        <rect key="frame" x="20" y="20" width="547" height="77"/>
+                                        <rect key="frame" x="20" y="20" width="263" height="154"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ILi-8s-vMC">
-                                                <rect key="frame" x="0.0" y="0.0" width="476" height="41"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="174" height="142"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Литые диски" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jE5-4L-uiz">
-                                                        <rect key="frame" x="0.0" y="0.0" width="104" height="41"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="174" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Спойлер" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JbR-zO-7I0">
-                                                        <rect key="frame" x="124" y="0.0" width="128" height="41"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Спойлер" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JbR-zO-7I0">
+                                                        <rect key="frame" x="0.0" y="40.5" width="174" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Прямоток" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgG-jd-M99">
-                                                        <rect key="frame" x="272" y="0.0" width="80" height="41"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Прямоток" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgG-jd-M99">
+                                                        <rect key="frame" x="0.0" y="81" width="174" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Брызговики Sparko" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQH-3O-X5a">
-                                                        <rect key="frame" x="372" y="0.0" width="104" height="41"/>
+                                                        <rect key="frame" x="0.0" y="121.5" width="174" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -74,19 +74,19 @@
                                                 <variation key="heightClass=compact-widthClass=compact" axis="horizontal"/>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="25r-DF-w2m">
-                                                <rect key="frame" x="0.0" y="46" width="451" height="31"/>
+                                                <rect key="frame" x="214" y="0.0" width="49" height="154"/>
                                                 <subviews>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fXp-zu-X2V">
                                                         <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
                                                     </switch>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YBm-ls-aUh">
-                                                        <rect key="frame" x="134" y="0.0" width="51" height="31"/>
+                                                        <rect key="frame" x="0.0" y="41" width="51" height="31"/>
                                                     </switch>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YN3-Je-Uk3">
-                                                        <rect key="frame" x="268" y="0.0" width="51" height="31"/>
+                                                        <rect key="frame" x="0.0" y="82" width="51" height="31"/>
                                                     </switch>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="el9-2q-LQv">
-                                                        <rect key="frame" x="402" y="0.0" width="51" height="31"/>
+                                                        <rect key="frame" x="0.0" y="123" width="51" height="31"/>
                                                     </switch>
                                                 </subviews>
                                                 <variation key="heightClass=compact-widthClass=compact" axis="horizontal" spacing="85"/>
@@ -104,7 +104,7 @@
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vaz2109" translatesAutoresizingMaskIntoConstraints="NO" id="U5w-fQ-qLn">
-                                <rect key="frame" x="287" y="28" width="94" height="94"/>
+                                <rect key="frame" x="104" y="28" width="167" height="167"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="U5w-fQ-qLn" secondAttribute="height" multiplier="1:1" id="dTc-cJ-yO3"/>
                                 </constraints>
